content and layout WIP

--- a/index.html
+++ b/index.html
@@ -6,17 +6,59 @@
 		<meta name="description" content="Verein antidot">
 		<meta name="viewport" content="initial-scale=0.6">
 		<link rel="stylesheet" href="styles/antidotincl.css" />
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	</head>
-	<body>
+	<body class="antidot">
+		<div class="bg"></div>
 		<div class="infos">
+			<img src="images/antidotincl_logo.png">
 			<div class="title">Verein antido<span class="last-char">t</span></div>
 			<div class="address">Postfach 8616</div>
 			<div class="address">8036 Zürich</div>
 			<div class="address"><a href="mailto:admin@antidotincl.ch">admin@antidotincl.ch</a></div>
 			<div class="konto">PC 85-615659-1</div>
-			<div class="impressum">Für die Inhalte zeichnet sich die jeweilige Redaktion der Nummer verantwortlich.</div>
+			<div class="impressum">
+				<span>Für die Inhalte zeichnet sich die jeweilige Redaktion der Nummer verantwortlich.</span>
+				<span>Die Arbeit an antidotincl. kostet keinen Franken, ganz im Gegensatz zur Produktion. Wir sind deshalb auf Spenden angewiesen und danken jetzt schon für die Untersützung.</span>
+			</div>
 			<!--div class="link"><a href="download/xyz.pdf"><span class="glyphicon glyphicon-download-alt"></span> Dokumentation</a></div-->
+		</div>
+		<div class="issue-list">
+			<div class="issue">
+				<div class="issue-nbr">33</div>
+				<div class="date">Frühling 2021</div>
+				<div class="title">Tour de Lorraine - tour décolonial</div>
+				<div class="abstract">Das Heft zur tour décolonial - Köpfe und Herzen dekolonisieren</div>
+				<div class="cover"><a href="download/antidotincl_033_2021.pdf" target="antidotPdf"><img src="download/antidotincl_033_2021.png"></a></div>
+			</div>
+			<div class="issue">
+				<div class="issue-nbr">32</div>
+				<div class="date">Januar 2020</div>
+				<div class="title">20 Jahre Tour de Lorraine - Klimagerechtigkeit!</div>
+				<div class="abstract">Die globale Allianz - Acht Gespräche über Aktivismus</div>
+				<div class="cover"><a href="download/antidotincl_032_202001.pdf" target="antidotPdf"><img src="download/antidotincl_032_202001.png"></a></div>
+			</div>
+			<div class="issue">
+				<div class="issue-nbr">30</div>
+				<div class="date">Januar 2019</div>
+				<div class="title">Tour de Lorraine - Who Cares?</div>
+				<div class="abstract">Einblicke in die unsichtbare Arbeit,
+					die unsere Gesellschaft zusammenhält.</div>
+				<div class="cover"><a href="download/antidotincl_030_201901.pdf" target="antidotPdf"><img src="download/antidotincl_030_201901.png"></a></div>
+			</div>
+			<div class="issue">
+				<div class="issue-nbr">26</div>
+				<div class="date">Januar 2018</div>
+				<div class="title">Tour de Lorraine - Teilhabe für alle! Da, wo wir leben.</div>
+				<div class="abstract">Konzepte, Strategien und Aktionen zu Urban Citizenship, zu Solidarischen Städten und gleichen Rechten für alle.</div>
+				<div class="cover"><a href="download/antidotincl_026_201801.pdf" target="antidotPdf"><img src="download/antidotincl_026_201801.png"></a></div>
+			</div>
+			<div class="issue">
+				<div class="issue-nbr">24</div>
+				<div class="date">April 2016</div>
+				<div class="title">Mit Care-Kraft zur Energie-Wende</div>
+				<div class="abstract">Frauen für das bedingungslose Grundeinkommen</div>
+				<div class="cover"><a href="download/antidotincl_024_201604.pdf" target="antidotPdf"><img src="download/antidotincl_024_201604.png"></a></div>
+			</div>
 		</div>
 	</body>
 </html>
