--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="description" content="Verein antidot">
 		<meta name="viewport" content="initial-scale=0.6">
 		<link rel="stylesheet" href="styles/antidotincl.css" />
+		<link href="images/favicon.png" rel="shortcut icon" type="image/png">
 	</head>
 	<body class="antidot">
 		<div class="bg"></div>
@@ -15,11 +16,12 @@
 			<div class="address">Postfach 8616</div>
 			<div class="address">8036 Zürich</div>
 			<div class="address"><a href="mailto:admin@antidotincl.ch">admin@antidotincl.ch</a></div>
-			<div class="konto">PC 85-615659-1</div>
+			
 			<div class="impressum">
 				<span>Für die Inhalte zeichnet sich die jeweilige Redaktion der Nummer verantwortlich.</span>
 				<span>Die Arbeit an antidotincl. kostet keinen Franken, ganz im Gegensatz zur Produktion. Wir sind deshalb auf Spenden angewiesen und danken jetzt schon für die Untersützung.</span>
 			</div>
+			<div class="konto">IBAN CH21 0900 0000 8561 5659 1 </div>
 			<!--div class="link"><a href="download/xyz.pdf"><span class="glyphicon glyphicon-download-alt"></span> Dokumentation</a></div-->
 		</div>
 		<div class="issue-list">
