--- a/index.html
+++ b/index.html
@@ -105,6 +105,13 @@
 				<div class="cover"><a href="download/antidotincl_018_2014.pdf" target="antidotPdf"><img src="download/antidotincl_018_2014.png"></a></div>
 			</div>
 			<div class="issue">
+				<div class="issue-nbr">16</div>
+				<div class="date">2014</div>
+				<div class="title">Türkei.14 / Türkiye.14 - ne var yok?</div>
+				<div class="abstract">Erdoğan vs. Gülen | Kein Arzt, kein Schutz | Brennpunkt Kurdistan | Gezi ist überall | Staatsterror im Gericht</div>
+				<div class="cover"><a href="download/antidotincl_016_2014.pdf" target="antidotPdf"><img src="download/antidotincl_016_2014.png"></a></div>
+			</div>
+			<div class="issue">
 				<div class="issue-nbr">15</div>
 				<div class="date">Januar 2014</div>
 				<div class="title">Tour de Lorraine - Hier baut das Quartier</div>
