--- a/index.html
+++ b/index.html
@@ -6,22 +6,22 @@
 		<meta name="description" content="Verein antidot">
 		<meta name="viewport" content="initial-scale=0.6">
 		<link rel="stylesheet" href="styles/antidotincl.css" />
+		<link href="js/antidotincl.js" as="script">
 		<link href="images/favicon.png" rel="shortcut icon" type="image/png">
 	</head>
 	<body class="antidot">
 		<div class="bg"></div>
 		<div class="infos">
-			<img src="images/antidotincl_logo.png">
-			<div class="title">Verein antido<span class="last-char">t</span></div>
-			<div class="address">Postfach 8616</div>
-			<div class="address">8036 Zürich</div>
-			<div class="address"><a href="mailto:admin@antidotincl.ch">admin@antidotincl.ch</a></div>
+			<img class="logo" src="images/antidotincl_logo.png">
+			<div class="title fade-out-mobile">Verein antido<span class="last-char">t</span></div>
+			<div class="address fade-out-mobile">Postfach 8616<br>8036 Zürich</div>
+			<div class="address fade-out-mobile"><a href="mailto:admin@antidotincl.ch">admin@antidotincl.ch</a></div>
 			
-			<div class="impressum">
+			<div class="impressum fade-out-mobile">
 				<span>Für die Inhalte zeichnet sich die jeweilige Redaktion der Nummer verantwortlich.</span>
 				<span>Die Arbeit an antidotincl. kostet keinen Franken, ganz im Gegensatz zur Produktion. Wir sind deshalb auf Spenden angewiesen und danken jetzt schon für die Untersützung.</span>
 			</div>
-			<div class="konto">IBAN CH21 0900 0000 8561 5659 1 </div>
+			<div class="konto fade-out-mobile">IBAN CH21 0900 0000 8561 5659 1 </div>
 			<!--div class="link"><a href="download/xyz.pdf"><span class="glyphicon glyphicon-download-alt"></span> Dokumentation</a></div-->
 		</div>
 		<div class="issue-list">
