--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
 		</div>
 		<div class="issue-list">
 			<div class="issue">
+				<div class="issue-nbr">34</div>
+				<div class="date">Frühling 2023</div>
+				<div class="title">Tour de Lorraine - Frieden und Krieg</div>
+				<div class="abstract">Entrüsten wir uns!</div>
+				<div class="cover"><a href="download/antidotincl_034_2023.pdf" target="antidotPdf"><img src="download/antidotincl_034_2023.png"></a></div>
+			</div>
+			<div class="issue">
 				<div class="issue-nbr">33</div>
 				<div class="date">Frühling 2021</div>
 				<div class="title">Tour de Lorraine - tour décolonial</div>
