--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 			<div class="issue">
 				<div class="issue-nbr">3</div>
 				<div class="date">Mai 2007</div>
-				<div class="title">G8 versanken</div>
+				<div class="title">G8 versenken</div>
 				<div class="abstract">Extrablatt zum G8-Gipfel in Heiligendamm</div>
 				<div class="cover"><a href="download/antidotincl_003_200705.pdf" target="antidotPdf"><img src="download/antidotincl_003_200705.png"></a></div>
 			</div>
